<resources>
    <string name="app_name">EcoQuiz</string>
    <!-- Buttons -->
    <string name="btLearn">Learn</string>
    <string name="btn_classic_go">Lets go!</string>
    <string name="btn_meme_go">Lets meme!</string>
    <string name="btMemeContinue">Continue</string>
    <string name="btMemeWait">Please wait…</string>
    <string name="btn_question_next">Next</string>
    <string name="btn_question_finish">Finish</string>
    <string name="btn_category_classic">Classic</string>
    <string name="btn_category_meme">Meme n\' Learn</string>
    <string name="radio_meme_option1">dankmemes</string>
    <string name="radio_meme_option2">memes</string>
    <string name="radio_meme_option3">meirl</string>
    <string name="spinner_textview">Amount of\nquestions</string>
    <string name="meme_textview_source">Meme source</string>
    <string name="FILE_NAME">Ecoquiz shared data</string>
    <string name="btUpdate">Update question DB</string>

    <string name="cbFastMeme">Fast Mode</string>
    <string name="img_description">Question Image</string>
    <string name="btSubmit">Submit</string>
    <string name="btAbout">About</string>

    <!-- About Fragment -->
    <string name="tvAboutTitleMain">Credits</string>
    <string name="tvAboutTitleQualityControl">Quality Control</string>
    <string name="tvBro">TonkatsuRamen</string>
    <string name="tvSb">sb</string>
    <string name="tvAboutContentQualityControl">Thanks for all the testing and hilarious inputs.</string>
    <string name="tvAboutTitleDev">Developer</string>
    <string name="tvAboutAuthorDeveloper">Some old man&#8482;</string>
    <string name="tvAboutContentDev">Click the gitlab pic to download the latest package!</string>


    <!-- Special Fragment pssst -->
    <string name="swAnnoy">Annoy Mode</string>
    <string name="swBootCamp">Bootcamp Mode</string>
    <string name="swBonfire">Orange mode</string>
    <string name="swBoom">Nuclear mode</string>
    <string name="tvTitleSubmit">Submit question</string>
    <string name="tvQuestion">Question</string>
    <string name="ctvAnswer2">Answer 2</string>
    <string name="ctvAnswer3">Answer 3</string>
    <string name="ctvAnswer4">Answer 4</string>
    <string name="tvUrl">URL picture</string>
    <string name="ctvAnswer1">Answer 1</string>
    <string name="btSend">Send</string>
    <string name="etQuestion">Enter Question here...</string>
    <string name="etAnswer1">Enter answer 1 here...</string>
    <string name="etAnswer2">Enter answer 2 here...</string>
    <string name="etAnswer3">Enter answer 3 here...</string>
    <string name="etAnswer4">Enter answer 4 here...</string>
    <string name="etUrl">Enter URL of picture... </string>
    <string name="tvUrlExtra">Hint: if you have an image file, upload it on TinyPic or Imgur and insert the URL above</string>
    <string name="tvQuestionCount">"Question database size: "</string>
    <string name="tvResultTitle">Result</string>
    <string name="btResultFinish">Finish</string>


</resources>
