<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">


        <TextView
            android:text="@string/tvAboutTitleMain"
            android:textSize="30sp"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/tvAboutTitleQualityControl"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvBro"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/tvBro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvSb"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:text="@string/tvSb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/tvAboutContentQualityControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/tvAboutTitleDev"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/tvAboutAuthorDeveloper"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/tvAboutContentDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <ImageView
            android:id="@+id/ivGitlab"
            android:layout_marginTop="20dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/gitlab"
            />
    </LinearLayout>
</FrameLayout>