<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:padding="18dp"
android:orientation="vertical"
tools:context=".OptionActivity">

<Button
    android:id="@+id/btn_category_classic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn_category_classic"
    android:onClick="classicOnClick"
    />
<Button
    android:layout_marginTop="30dp"
    android:id="@+id/btn_category_meme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn_category_meme"
    android:onClick="memeOnClick"
    />
    <CheckBox
        android:layout_marginTop="30dp"
        android:id="@+id/cbFastMode"
        android:text="@string/cbFastMeme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>